# Frontend/ng.Frontend/openapi/Backend.json
@@ -394,7 +394,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/RoomResponseDto"
+                    "$ref": "#/components/schemas/RoomDetailModel"
                   }
                 }
               }
@@ -462,7 +462,7 @@
                 "integer",
                 "string"
               ],
-              "format": "int32"
+              "format": "int64"
             }
           }
         ],
@@ -472,7 +472,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/RoomResponseDto"
+                  "$ref": "#/components/schemas/RoomDetailModel"
                 }
               }
             }
@@ -575,7 +575,7 @@
                 "integer",
                 "string"
               ],
-              "format": "int32"
+              "format": "int64"
             }
           }
         ],
@@ -893,7 +893,8 @@
           "type",
           "floor",
           "address",
-          "notes"
+          "notes",
+          "assetIds"
         ],
         "type": "object",
         "properties": {
@@ -929,6 +930,20 @@
               "null",
               "string"
             ]
+          },
+          "assetIds": {
+            "type": [
+              "null",
+              "array"
+            ],
+            "items": {
+              "pattern": "^-?(?:0|[1-9]\\d*)$",
+              "type": [
+                "integer",
+                "string"
+              ],
+              "format": "int64"
+            }
           }
         }
       },
@@ -1001,6 +1016,70 @@
           }
         }
       },
+      "RoomDetailModel": {
+        "required": [
+          "roomId",
+          "name",
+          "capacity",
+          "type",
+          "floor",
+          "address",
+          "notes"
+        ],
+        "type": "object",
+        "properties": {
+          "roomId": {
+            "pattern": "^-?(?:0|[1-9]\\d*)$",
+            "type": [
+              "integer",
+              "string"
+            ],
+            "format": "int64"
+          },
+          "name": {
+            "type": "string"
+          },
+          "capacity": {
+            "pattern": "^-?(?:0|[1-9]\\d*)$",
+            "type": [
+              "null",
+              "integer",
+              "string"
+            ],
+            "format": "int32"
+          },
+          "type": {
+            "$ref": "#/components/schemas/RoomType"
+          },
+          "floor": {
+            "type": [
+              "null",
+              "string"
+            ]
+          },
+          "address": {
+            "type": [
+              "null",
+              "string"
+            ]
+          },
+          "notes": {
+            "type": [
+              "null",
+              "string"
+            ]
+          },
+          "assets": {
+            "type": [
+              "null",
+              "array"
+            ],
+            "items": {
+              "type": "string"
+            }
+          }
+        }
+      },
       "RoomResponseDto": {
         "required": [
           "id",
@@ -1009,7 +1088,8 @@
           "type",
           "floor",
           "address",
-          "notes"
+          "notes",
+          "assets"
         ],
         "type": "object",
         "properties": {
@@ -1053,6 +1133,15 @@
               "null",
               "string"
             ]
+          },
+          "assets": {
+            "type": [
+              "null",
+              "array"
+            ],
+            "items": {
+              "type": "string"
+            }
           }
         }
       },
@@ -1071,7 +1160,8 @@
           "type",
           "floor",
           "address",
-          "notes"
+          "notes",
+          "assetIds"
         ],
         "type": "object",
         "properties": {
@@ -1107,6 +1197,20 @@
               "null",
               "string"
             ]
+          },
+          "assetIds": {
+            "type": [
+              "null",
+              "array"
+            ],
+            "items": {
+              "pattern": "^-?(?:0|[1-9]\\d*)$",
+              "type": [
+                "integer",
+                "string"
+              ],
+              "format": "int64"
+            }
           }
         }
       },
